# debugger

./: Cargo.toml  README.md
debugger/: Cargo.toml
debugger/src/: lib.rs
disassembler/: Cargo.toml
disassembler/src/: lib.rs  style.rs
disassembler/src/style/: b.rs  i.rs  r.rs  s.rs
emulator/: Cargo.toml
emulator/crates/exec/: Cargo.toml
emulator/crates/exec/src/: lib.rs  mem.rs
emulator/crates/inst/: Cargo.toml
emulator/crates/inst/src/: def.rs  lib.rs
emulator/crates/inst/src/def/: add.rs  addi.rs  and.rs  andi.rs  beq.rs  ble.rs  blt.rs  bne.rs  in.rs  jal.rs  lb.rs  lbu.rs  lh.rs  lhu.rs  lw.rs  nop.rs  or.rs  ori.rs  out.rs  sb.rs  sh.rs  sll.rs  slli.rs  sra.rs  srai.rs  srl.rs  srli.rs  sub.rs  subi.rs  sw.rs  xor.rs  xori.rs
emulator/crates/inst_macros/: Cargo.toml
emulator/crates/inst_macros/src/: impl.rs
emulator/crates/inst_macros/src/impl/: b.rs  i.rs  r.rs  s.rs
emulator/crates/inst_macros/tests/: insts.rs
emulator/crates/ir/: Cargo.toml
emulator/crates/ir/src/: inst.rs  lib.rs
emulator/crates/ir/src/inst/: add.rs  addi.rs  and.rs  andi.rs  beq.rs  ble.rs  blt.rs  bne.rs  in.rs  jal.rs  lb.rs  lbu.rs  lh.rs  lhu.rs  lw.rs  nop.rs  or.rs  ori.rs  out.rs  sb.rs  sh.rs  sll.rs  slli.rs  sra.rs  srai.rs  srl.rs  srli.rs  sub.rs  subi.rs  sw.rs  xor.rs  xori.rs
emulator/crates/ir_macros/: Cargo.toml
emulator/crates/ir_macros/src/: lib.rs
emulator/crates/ir_macros/tests/: insts.rs
emulator/crates/state/: Cargo.toml
emulator/crates/state/src/: device.rs  lib.rs  mem.rs  reg.rs
emulator/src/: lib.rs
examples/fizzbuzz/: dmem.hex  fizzbuzz.asm  imem.hex
examples/helloworld/: dmem.hex  helloworld.asm  imem.hex
examples/ichimatsu/: ichimatsu.asm  imem.hex
examples/sandstorm/: imem.hex
examples/seccamp2025_slide/: slide_0.asm  slide_1.asm  slide_2.asm  slide_3.asm  slide_4.asm  slide_5.asm  slide_6.asm  slide_7.asm  slide_8.asm
src/: lib.rs  load.rs  main.rs  opts.rs  ui.rs
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/tui/: Cargo.toml
src/tui/crates/engine/: Cargo.toml
src/tui/crates/engine/src/: layout.rs  lib.rs  widget.rs  workspace.rs
src/tui/crates/engine/src/layout/: build.rs  control.rs  mapping.rs  tree.rs
src/tui/crates/engine/src/layout/control/: map.rs  select.rs  tree.rs
src/tui/crates/engine/src/layout/tree/: raw.rs  wrapped.rs
src/tui/crates/engine/src/widget/: help.rs  mode.rs
src/tui/crates/engine/src/workspace/: build.rs  emb_help.rs  emb_mode.rs  emb_status.rs  emb_widget.rs  layout.rs
src/tui/crates/engine/src/workspace/emb_widget/: help.rs  status.rs
src/tui/crates/engine/src/workspace/layout/: build.rs  control.rs
src/tui/crates/engine/src/workspace/layout/control/: map.rs  select.rs  tree.rs
src/tui/crates/widget_device/: Cargo.toml
src/tui/crates/widget_device/src/: gpout.rs  lib.rs  uart.rs
src/tui/crates/widget_device_display/: Cargo.toml
src/tui/crates/widget_device_display/src/: lib.rs
src/tui/crates/widget_device_gpout/: Cargo.toml
src/tui/crates/widget_device_gpout/src/: lib.rs
src/tui/crates/widget_device_uart/: Cargo.toml
src/tui/crates/widget_device_uart/src/: lib.rs
src/tui/crates/widget_inst/: Cargo.toml
src/tui/crates/widget_inst/src/: lib.rs
src/tui/crates/widget_mem/: Cargo.toml
src/tui/crates/widget_mem/src/: lib.rs
src/tui/crates/widget_reg/: Cargo.toml
src/tui/crates/widget_reg/src/: lib.rs
src/tui/src/: lib.rs  main.rs  ui.rs
src/tui/src/ui/: layout.rs  widget.rs  workspace.rs
src/tui/src/ui/widget/: device.rs  help.rs  inst.rs  mem.rs  mode.rs  reg.rs
src/tui/src/ui/widget/device/: gpout.rs  uart.rs
src/ui/: layout.rs  widget.rs
src/ui/widget/: device.rs  device_view.rs  help.rs  help_view.rs  inst.rs  inst_view.rs  mem.rs  mem_view.rs  mode.rs  outout_view.rs  reg.rs  reg_view.rs  state_view.rs
src/ui/widget/device/: uart.rs
src/utils/: Cargo.toml
src/utils/src/: args.rs  lib.rs  load.rs
(+7 files in other folders)
