[package]
name = "sb_dbg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
ratatui = "0.29.0"
crossterm = "0.28.1"
sb_emu = { path = "./emulator" }

[workspace]
resolver = "2"
members = [
    "./emulator",
]

[workspace.dependencies]
anyhow = "1.0.93"
thiserror = "2.0.3"
