[workspace]
resolver = "2"
members = [
    # lib (public)
    "./disassembler",
    "./emulator",

    # lib (private)
    "./src/utils",

    # bin
    "./src/cli",
    "./src/tui",
]

[workspace.dependencies]
anyhow = "1.0.93"
thiserror = "2.0.3"
sb_emu = { path = "./emulator" }
sb_disasm = { path = "./disassembler" }
sb_dbg_utils = { path = "./src/utils" }
