[package]
name = "sb_dbg_tui"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
ratatui = "0.29.0"
crossterm = "0.28.1"
sb_emu = { path = "../../emulator" }
sb_disasm = { path = "../../disassembler" }
sb_dbg_utils = { path = "../utils" }
