[package]
name = "sb_dbg_tui_widget_device_display"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
ratatui = "0.29.0"
ratatui-image = "5.0.0"
image = "0.25.5"
crossterm = "0.28.1"
sb_emu = { workspace = true }
sb_dbg_tui_engine = { path = "../engine" }
